# configreader

./: .gitignore  LICENSE  pyproject.toml  setup.py
config_reader/: config_reader.py
src/myconfigreader/: __init__.py  config_reader.py
tests/: test.py
