[project]
name = "apsniper0673_configreader"
version = "0.1.4"
description = "My config reader package"
authors = [
  { name = "sniper0673" }
]
requires-python = ">=3.8"
dependencies = [
    # "pandas>=1.5.0",
    # "numpy>=1.23.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]